--- a/package.json
+++ b/package.json
@@ -27,5 +27,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^1.3.0",
+    "script-ext-html-webpack-plugin": "^2.1.3",
+    "style-loader": "^0.23.1",
+    "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^2.0.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-merge": "^4.2.1"
   }
 }
